# beertender_robot

./: .clang-format  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  docker-compose.yml
.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
.github/workflows/: main.yml  robot.yml
dockerfiles/: Dockerfile.create2-base  Dockerfile.create2-beertender-robot  Dockerfile.sdk-base  Dockerfile.sdk-beertender-robot
environments/: CMakeLists.txt  package.xml
environments/maps/: map.yaml
environments/rviz/: viewer.rviz
navigation/: CMakeLists.txt  package.xml
navigation/include/navigation/: planner.h  planner_types.h
navigation/include/navigation/global_planner/: breadth_first_search.h  global_planner.h  global_planner_types.h
navigation/include/navigation/local_planner/: dynamic_window_approach.h  local_planner.h
navigation/src/: planner.cpp  planner_main.cpp
navigation/src/global_planner/: breadth_first_search.cpp
navigation/src/local_planner/: dynamic_window_approach.cpp
robot/: CMakeLists.txt
robot/include/robot/: car_robot.h  robot.h  robot_types.h
robot/src/: car_robot.cpp
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/: robot_bringup.launch  sim_bringup.launch  visualization.launch
src/environments/: CMakeLists.txt
src/environments/launch/: env.launch
src/environments/rviz/: viewer.rviz
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: beertender_robot.lua
src/localization/launch/: cartographer.launch
src/navigation/: CMakeLists.txt  package.xml
src/navigation/global_planner/: CMakeLists.txt  package.xml
src/navigation/global_planner/include/global_planner/: breadth_first_search.h  global_planner.h
src/navigation/global_planner/src/: breadth_first_search.cpp  global_planner_main.cpp
src/navigation/include/navigation/: map.h  planner.h  planner_types.h
src/navigation/include/navigation/global_planner/: breadth_first_search.h  global_planner.h
src/navigation/include/navigation/local_planner/: dynamic_window_approach.h  local_planner.h
src/navigation/local_planner/: CMakeLists.txt  package.xml
src/navigation/local_planner/config/: config.yaml
src/navigation/local_planner/include/local_planner/: dynamic_window_approach.h  local_planner.h
src/navigation/local_planner/launch/: local_planner.launch  local_planner_rostest.test
src/navigation/local_planner/src/: dynamic_window_approach.cpp  local_planner_main.cpp
src/navigation/local_planner/test/: dwa_test.cpp
src/navigation/nav_utils/: CMakeLists.txt  package.xml
src/navigation/nav_utils/action/: FindGlobalGoal.action  FindGlobalPath.action  ReachGlobalPose.action
src/navigation/nav_utils/include/nav_utils/: map.h  tf_helper.h
src/navigation/nav_utils/src/: map.cpp  tf_helper.cpp
src/navigation/nav_utils/srv/: SetGoal.srv
src/navigation/path_planning/global_planner/: CMakeLists.txt  package.xml
src/navigation/path_planning/global_planner/include/global_planner/: breadth_first_search.h
src/navigation/path_planning/global_planner/launch/: global_planner.launch
src/navigation/path_planning/global_planner/src/: breadth_first_search.cpp
src/navigation/path_planning/local_planner/: CMakeLists.txt  package.xml
src/navigation/path_planning/local_planner/config/: DWA.cfg
src/navigation/path_planning/local_planner/include/local_planner/: dynamic_window_approach.h  local_planner.h
src/navigation/path_planning/local_planner/src/: dynamic_window_approach.cpp
src/navigation/path_planning/planner/: CMakeLists.txt
src/navigation/path_planning/planner/include/planner/: planner.h
src/navigation/path_planning/planner/launch/: planner.launch
src/navigation/path_planning/planner/src/: planner.cpp
src/navigation/path_planning/robot/: CMakeLists.txt
src/navigation/path_planning/robot/src/: car_robot.cpp
src/navigation/planner/: CMakeLists.txt  package.xml
src/navigation/planner/config/: config.yaml
src/navigation/planner/include/planner/: planner.h
src/navigation/planner/launch/: planner.launch
src/navigation/planner/src/: planner.cpp  planner_main.cpp
src/navigation/robot/: package.xml
src/navigation/robot/include/robot/: car_robot.h  robot.h  robot_types.h
src/navigation/robot/src/: car_robot.cpp
src/navigation/robot/urdf/: car_robot_estimate.urdf
src/navigation/src/: map.cpp  planner.cpp  planner_main.cpp
src/navigation/src/global_planner/: breadth_first_search.cpp
src/navigation/src/local_planner/: dynamic_window_approach.cpp
src/robot/include/robot/: car_robot.h  robot.h  robot_types.h
src/robot/src/: car_robot.cpp
src/robot/urdf/: car_robot.urdf
src/robot_hw/create_description/: CMakeLists.txt  README.md  package.xml
src/robot_hw/create_description/launch/: create_description.launch
src/robot_hw/create_description/meshes/sensors/: rplidar.dae
src/robot_hw/create_description/urdf/: create_2.urdf.xacro  create_2.xacro  create_base.urdf.xacro  create_base.xacro  create_base_gazebo.xacro
src/robot_hw/create_description/urdf/sensors/: camera_generic.xacro  camera_sensor.xacro  cliff_sensors.xacro  imu_sensor.xacro  omni_sensor.xacro  wall_sensor.xacro
src/robot_hw/create_description/urdf/sensors/lasers/: rplidar.xacro
src/robot_hw/create_driver/: CMakeLists.txt  package.xml
src/robot_hw/libcreate/: CMakeLists.txt  README.md
src/robot_sim/: CMakeLists.txt  package.xml
src/robot_sim/config/: config.yaml
src/robot_sim/include/occupancy_grid_utils/: ray_tracer.h
src/robot_sim/include/robot_sim/: robot_sim.h
src/robot_sim/launch/: robot_sim.launch
src/robot_sim/src/: robot_sim.cpp  robot_sim_main.cpp
src/robot_sim/src/occupancy_grid_utils/: ray_tracer.cpp
src/robot_utils/: CMakeLists.txt  package.xml
src/robot_utils/include/robot_utils/kinematics/: state_update.h
src/simulation/: CMakeLists.txt
src/simulation/launch/: robot_sim.launch  sim_world.launch
src/simulation/models/apt321/: model.config  model.sdf
src/simulation/worlds/: apt321.world
tools/: beertender_main.py  run.sh  setup.sh  setup_cartographer.sh
(+3 files in other folders)
