<?xml version="1.0"?>
<package format="2">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>The bringup package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <author email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>