<?xml version="1.0"?>
<package format="2">
  <name>localization</name>
  <version>0.0.0</version>
  <description>The localization package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <author email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cartographer_ros</build_depend>
  <build_depend>robot_utils</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>robot_utils</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>robot_utils</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
  </export>
</package>