<?xml version="1.0"?>
<package format="2">
  <name>robot_sim</name>
  <version>0.0.0</version>
  <description>The robot_sim package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <author email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>nav_utils</build_depend>
  <build_depend>robot_utils</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf2_bullet</build_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>robot_utils</build_export_depend>
  <build_export_depend>nav_utils</build_export_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_utils</exec_depend>
  <exec_depend>robot_utils</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>tf2_bullet</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>