<?xml version="1.0"?>
<package format="2">
  <name>local_planner</name>
  <version>0.0.0</version>
  <description>The local_planner package</description>
  <maintainer email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</maintainer>
  <author email="venkatavaradhan93@gmail.com">Venkatavaradhan Vembanoor Lakshmi Narayanan</author>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>robot</build_depend>
  <build_depend>nav_utils</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>robot</build_export_depend>
  <build_export_depend>nav_utils</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot</exec_depend>
  <exec_depend>nav_utils</exec_depend>
  <export>
  </export>
</package>
