<?xml version="1.0"?>
<package format="2">
  <name>create_description</name>
  <version>1.3.0</version>
  <description>Robot URDF descriptions for create_autonomy</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/create_description</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>realsense2_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
